--- a/CardApp/Views/Home/Index.cshtml
+++ b/CardApp/Views/Home/Index.cshtml
@@ -53,11 +53,11 @@
                     <div class="form-group">
                 
                         <label for="cardExpirationInput">Fecha de Vencimiento</label>
-                        <input type="text" asp-for="ExpirationDate" id="ExpirationInput" min="4" maxlength="4" oninput="this.value = this.value.replace(/[^0-9]/g, '')" required>
+                        <input type="text" asp-for="ExpirationDate" placeholder="mm/aa" id="ExpirationInput" min="4" maxlength="4" oninput="this.value = this.value.replace(/[^0-9]/g, '')" required>
                     </div>
                     <div class="form-group">
                         <label for="cardCvvInput">CVV</label>
-                        <input type="text" asp-for="CVV" maxlength="3" oninput="this.value = this.value.replace(/[^0-9]/g, '')" required>
+                        <input type="text" asp-for="CVV" placeholder="123" maxlength="3" oninput="this.value = this.value.replace(/[^0-9]/g, '')" required>
                     </div>
                 </div>
 
